# physumber

./: .pylintrc  CHANGELOG.txt  Code_of_conduct.md  MANIFEST.in  README.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: bandit.yml  codeql.yml  devskim.yml  directory-lookup.yml  pylint.yml  pytest.yml  python-publish.yml
physumber/: __init__.py
physumber/sumbermath/: __init__.py  algebra.py
pyPhysumber/: __init__.py
pyphysumber/: __init__.py
tests/: __init__.py  test_algebra.py  test_sumbermath.py  test_sumberphysics.py
