[metadata]
name = pyphysumber
version = 2025.0.0a1
author = Aitzaz Imtiaz
author_email = aitzazimtiaz.ai@gmail.com
description = Python library in computing Mathematics and Physics expressions
long_description = file: README.txt
long_description_content_type = text/markdown
license = AGPL-3.0-or-later
keywords = Physics, Mathematics, Computation
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = pyphysumber:
package_dir =
    physumber = pyphysumber
include_package_data = True
python_requires = >=3.9
install_requires =
    logging
    importlib
    
[options.package_data]
pyphysumber = *.txt, *.md

[options.entry_points]
console_scripts =
    sumber-info = sumber:help
